# ApiWords

./: .coverage  .gitignore  DockerFile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.yml  requirements.txt
.github/workflows/: appwords.yml
api/app/: enpoints.py  main.py
api/config/: schemas.py
api/helpers/: word_treatment.py
api/tests/: test_post_sort_word.py  test_post_vowel_count.py
api/tests/helpers/: test_word_treatment.py
app/: crud.py  enpoints.py  main.py  router.py
config/: schemas.py
config/sql_alchemy/: config_sql_alchemy.py  models.py  schemas.py
helpers/: word_treatment.py
services/: word_service.py
tests/: test_post_sort_word.py  test_post_vowel_count.py
