[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["edummap4412 <mascarenhaseduardo4412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"
uvicorn = "^0.22.0"
fastapi = "^0.97.0"
psycopg2 = "^2.9.6"
httpx = "^0.24.1"
sqlalchemy = "^2.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
