[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["edummap4412 <mascarenhaseduardo4412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
pydantic = "^1.10.9"
fastapi = "^0.97.0"
httpx = "^0.24.1"
coverage = "^7.2.7"
pytest = "^7.3.2"
coverage-badge = "^1.1.0"
flake8 = "^6.0.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
